--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body {
     2s duration, 1s delay;
 }
 
-/* Section Title */
+
 
 /* Flex container to hold image and text */
 .content {
@@ -146,7 +146,7 @@ body {
     height: 300px;
     flex-direction: row;
     align-items: center;
-    gap: 0; /* Remove the gap between image and text */
+    gap: 0;
 }
 
 /* Personal image styling */
@@ -160,10 +160,9 @@ body {
 /* Text section styling */
 .text-section {
     padding-left: 465px;
-    /* flex-grow: 1; */
     display: flex;
     justify-content: center;
-    overflow: hidden; /* Prevent overflow if text is too long */
+    overflow: hidden;
     background-color: #292928;
     border-radius: 15px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
@@ -202,11 +201,11 @@ body {
 @keyframes slideFadeIn {
     0% {
         opacity: 0;
-        transform: translateY(80px); /* Start lower */
+        transform: translateY(80px); 
     }
     100% {
         opacity: 1;
-        transform: translateY(100%); /* Move to natural position */
+        transform: translateY(100%); 
     }
 }
 
@@ -221,7 +220,7 @@ body {
 
 .skill_text{
     color:white;
-    font-size: 35px;
+    font-size: 70px;
     transform: translateY();
     transform: translateX(47%);
     text-align: center;
@@ -230,33 +229,37 @@ body {
 .skills_text{
     padding: 20px; /* Space between the text and the edges of the box */
     display: flex;
-    flex-direction: column; /* Stack elements vertically */
-    justify-content: flex-start; /* Align text to the top of the box */
-    position: relative; /* Allows positioning adjustments */
+    flex-wrap: wrap; /* Allow wrapping if there are many skills */
+    justify-content: flex-start; /* Align items to the start of the container */
     background-color: #292928;
+    gap: 50px;
     border-radius: 15px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
-    width: 100%; /* Width relative to the container */
+    width: 100%; 
     max-width: 800px;
     min-height: 400px;
-    margin: 100px auto; /* Center horizontally within the container */
-    transform: translate(650px, 50px); /* Adjust the X and Y offset as needed */
-    color: #dcdcdc; /* Text color for readability */
+    margin: 100px auto; 
+    transform: translate(650px, 50px); 
+    color: #dcdcdc; 
     font-size: 40px;
 }
 
+.skill {
+    display: flex;
+    flex-direction:row ;
+    align-items: center; /* Center text and logo */
+}
 
-.skill-title {
-    font-size: 1em;
+
+.skill-title, .skill-java {
+    font-size: 1.5em;
     color: white;
+    margin-bottom: 40px;
 }
 
 .skill-logo {
-    transform: translateX(25px);
-    margin-top: 5px; 
-    width: 60px; 
+    width: 40px; /* Size of the logo */
     height: auto;
-    color: white;
 }
 
 html, body {
